<resources>
    <string name="app_name">Weatharium</string>

    <string name="weather_label">Current weather</string>
    <string name="forecast_label">Forecast</string>
    <string name="day5_forecast_label">5 day forecast</string>

    <string name="change_city">Change city</string>

    <!-- Put your own APP ID here -->
    <string name="open_weather_maps_app_id">406bd18ab04d7fe4c05a33e464f6c244</string>

    <string name="weather_sunny">&#xf00d;</string>
    <string name="weather_clear_night">&#xf02e;</string>

    <string name="weather_foggy">&#xf014;</string>
    <string name="weather_cloudy">&#xf013;</string>
    <string name="weather_rainy">&#xf019;</string>
    <string name="weather_snowy">&#xf01b;</string>
    <string name="weather_thunder">&#xf01e;</string>
    <string name="weather_drizzle">&#xf01c;</string>

    <string name="place_not_found">Sorry, no weather data found.</string>



    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="city_picker">Выбор города</string>
    <string name="city_label">Город</string>

    <string-array name="city_list">
        <item>Санкт-Петербург</item>
        <item>Москва</item>
        <item>Омск</item>
        <item>Ростов-на-Дону</item>
        <item>Киев</item>
        <item>Днепропетровск</item>
        <item>Одесса</item>
        <item>Минск</item>
        <item>Лондон</item>
        <item>Париж</item>
    </string-array>

    <string name="pref_city">Изменить город</string>
    <string name="setup_label">Настройки приложения</string>
    <string name="setup_forecast_cnt_label">Количество дней прогноза</string>
    <string name="setup_temp_label">Температура</string>

    <string name="metric_unit">Цельсий</string>

</resources>
